ZCS-10156: Added code to support cancel wipe & block buttons

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2791,3 +2791,9 @@ MB_Suspended = Susp\u00e8s
 MB_Wipe_ACK = Neteja pendent
 MB_Wipe_Comp = Esborrat completat
 TABT_Mobile = M\u00f2bil
+MB_But_Block = Bloc
+MB_But_Wipe_Cancel = Cancel\u00b7la Neteja
+MB_Waiting = Esperant per al dispositiu
+BUSY_BLOCKING_SYNC_DEVICES = S'estan bloquejant els dispositius sincronitzats ...
+BUSY_CANCELLING_WIPE = S'est/u00e0 cancel/u00b7lant l'operaci/u00f3 de neteja ...
+MB_But_Disconnect = Desconnecta
