--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2701,3 +2701,10 @@ MB_Suspended = Suspenderet
 MB_Wipe_ACK = T\u00f8rres afventende
 MB_Wipe_Comp = T\u00f8rring afsluttet
 TABT_Mobile = Mobil
+
+MB_But_Block = Blok
+MB_But_Wipe_Cancel = Annuller sletning
+MB_Waiting = Venter p\u00e5 enhed
+BUSY_BLOCKING_SYNC_DEVICES = Blokerer synkroniserede enheder ...
+BUSY_CANCELLING_WIPE = Annullerer aft/u00f8rring ...
+MB_But_Disconnect = Koble fra
