--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2765,3 +2765,10 @@ MB_Suspended = Suspendiert
 MB_Wipe_ACK = Wischen ausstehend
 MB_Wipe_Comp = Wischen abgeschlossen
 TABT_Mobile = Handy, Mobiltelefon
+
+MB_But_Block = Block
+MB_But_Wipe_Cancel = L\u00f6schen abbrechen
+MB_Waiting = Warten auf Ger\u00e4t
+BUSY_BLOCKING_SYNC_DEVICES = Synchronisierte Ger/u00e4te blockieren ...
+BUSY_CANCELLING_WIPE = Wischvorgang abbrechen ...
+MB_But_Disconnect = Trennen
