--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -2792,3 +2792,10 @@ MB_Suspended = Suspended
 MB_Wipe_ACK = Wipe pending
 MB_Wipe_Comp = Wipe completed
 MB_Blocked = Blocked
+
+MB_But_Wipe_Cancel = Cancel Wipe
+MB_But_Block = Block
+MB_Waiting = Waiting for device
+BUSY_BLOCKING_SYNC_DEVICES = Blocking synced devices ...
+BUSY_CANCELLING_WIPE = Canceling wipe operation ...
+MB_But_Disconnect = Disconnect
