--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2775,3 +2775,10 @@ MB_Suspended = Suspendido
 MB_Wipe_ACK = Limpiar pendiente
 MB_Wipe_Comp = Limpiar completado
 TABT_Mobile = M\u00f3vil
+
+MB_But_Block = Bloquear
+MB_But_Wipe_Cancel = Cancelar limpieza
+MB_Waiting = Esperando por el dispositivo
+BUSY_BLOCKING_SYNC_DEVICES = Bloqueando dispositivos sincronizados ...
+BUSY_CANCELLING_WIPE = Cancelando la operaci/u00f3n de limpieza ...
+MB_But_Disconnect = desconectar
