--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2792,3 +2792,10 @@ MB_Suspended = Etenda
 MB_Wipe_ACK = Garbitu zain
 MB_Wipe_Comp = Garbitu amaitu da
 TABT_Mobile = Mugikorra
+
+MB_But_Block = Blokeatu
+MB_But_Wipe_Cancel = Utzi garbiketa
+MB_Waiting = Gailuaren zain
+BUSY_BLOCKING_SYNC_DEVICES = Sinkronizatutako gailuak blokeatzen ...
+BUSY_CANCELLING_WIPE = Garbiketa eragiketa bertan behera uzten ...
+MB_But_Disconnect = deskonektatu
