--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = Suspendu
 MB_Wipe_ACK = Effacer en attente
 MB_Wipe_Comp = Essuyage termin\u00e9
 TABT_Mobile = Mobile
+
+MB_But_Block = Bloc
+MB_But_Wipe_Cancel = Annuler l'effacement
+MB_Waiting = En attente de l'appareil
+BUSY_BLOCKING_SYNC_DEVICES = Blocage des appareils synchronis/u00e9s ...
+BUSY_CANCELLING_WIPE = Annulation de l'op/u00e9ration d'effacement ...
+MB_But_Disconnect = d/u00e9connecter
