--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = Felf\u00fcggesztett
 MB_Wipe_ACK = T\u00f6r\u00f6lje a f\u00fcgg\u0151ben
 MB_Wipe_Comp = A t\u00f6rl\u00e9s befejez\u0151d\u00f6tt
 TABT_Mobile = Mobil
+
+MB_But_Block = Blokk
+MB_But_Wipe_Cancel = T\u00f6r\u00f6lje a T\u00f6rl\u00e9s lehet\u0151s\u00e9get
+MB_Waiting = V\u00e1rakoz\u00e1s az eszk\u00f6zre
+BUSY_BLOCKING_SYNC_DEVICES = Szinkroniz/u00e1lt eszk/u00f6z/u00f6k blokkol/u00e1sa ...
+BUSY_CANCELLING_WIPE = T/u00f6rl/u00e9si m/u0171velet t/u00f6rl/u00e9se ...
+MB_But_Disconnect = sz/u00e9tkapcsol
