--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2806,3 +2806,10 @@ MB_Suspended = Tergantung
 MB_Wipe_ACK = Penghapusan tertunda
 MB_Wipe_Comp = Penghapusan selesai
 TABT_Mobile = Seluler
+
+MB_But_Wipe_Cancel = Batalkan Penghapusan
+MB_But_Block = Blok
+MB_Waiting = Menunggu perangkat
+BUSY_BLOCKING_SYNC_DEVICES = Memblokir perangkat yang disinkronkan ...
+BUSY_CANCELLING_WIPE = Membatalkan operasi penghapusan ...
+MB_But_Disconnect = Memutuskan
