--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2701,3 +2701,10 @@ MB_Suspended = Sospeso
 MB_Wipe_ACK = Cancella in sospeso
 MB_Wipe_Comp = Cancellazione completata
 TABT_Mobile = Mobile
+
+MB_But_Block = Bloccare
+MB_But_Wipe_Cancel = Annulla cancellazione
+MB_Waiting = In attesa del dispositivo
+BUSY_BLOCKING_SYNC_DEVICES = Blocco dei dispositivi sincronizzati ...
+BUSY_CANCELLING_WIPE = Annullamento dell'operazione di cancellazione ...
+MB_But_Disconnect = Disconnect
