--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = \u5de\u5d5\u5bc\u5e9\u5c1\u5d4\u5b6\u5d4
 MB_Wipe_ACK = \u5e0\u5d2\u5d1 \u5d1\u5d4\u5de\u5ea\u5e0\u5d4
 MB_Wipe_Comp = \u5d4\u5e0\u5d2\u5d1 \u5d4\u5d5\u5e9\u5dc\u5dd
 TABT_Mobile = \u5e0\u5d9\u5d9\u5d3
+
+MB_But_Block = \u05d7\u05e1\u05d5\u05dd
+MB_But_Wipe_Cancel = \u05d1\u05d8\u05dc \u05de\u05d7\u05d9\u05e7\u05d4
+MB_Waiting = \u05de\u05d7\u05db\u05d4 \u05dc\u05de\u05db\u05e9\u05d9\u05e8
+BUSY_BLOCKING_SYNC_DEVICES = /u05d7/u05d5/u05e1/u05dd /u05de/u05db/u05e9/u05d9/u05e8/u05d9/u05dd /u05de/u05e1/u05d5/u05e0/u05db/u05e8/u05e0/u05d9/u05dd ...
+BUSY_CANCELLING_WIPE = /u05de/u05d1/u05d8/u05dc /u05e4/u05e2/u05d5/u05dc/u05ea /u05e0/u05d9/u05d2/u05d5/u05d1 ...
+MB_But_Disconnect = /u05dc/u05e0/u05ea/u05e7
