--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2754,3 +2754,10 @@ MB_Suspended = \u4e00\u6642\u505c\u6b62
 MB_Wipe_ACK = \u30ef\u30a4\u30d7\u4fdd\u7559\u4e2d
 MB_Wipe_Comp = \u30ef\u30a4\u30d7\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f
 TABT_Mobile = \u30e2\u30d0\u30a4\u30eb
+
+MB_But_Block = aaaaaaaaaaaa\u30d6\u30ed\u30c3\u30af
+MB_But_Wipe_Cancel = aaaaaaaaaaaa\u30ef\u30a4\u30d7\u3092\u30ad\u30e3\u30f3\u30bb\u30eb
+MB_Waiting = aaaaaaaaaaaa\u30c7\u30d0\u30a4\u30b9\u3092\u5f85\u3063\u3066\u3044\u308b
+BUSY_BLOCKING_SYNC_DEVICES = /u540c/u671f/u3055/u308c/u305f/u30c7/u30d0/u30a4/u30b9/u306e/u30d6/u30ed/u30c3/u30af../u3002
+BUSY_CANCELLING_WIPE = /u30ef/u30a4/u30d7/u64cd/u4f5c/u306e/u30ad/u30e3/u30f3/u30bb/u30eb../u3002
+MB_But_Disconnect = /u5207/u65ad/u3059/u308b
