--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2744,3 +2744,10 @@ MB_Suspended = \ub9e4\ub2ec\ub9b0
 MB_Wipe_ACK = \uc9c0\uc6b0\uae30 \ub300\uae30 \uc911
 MB_Wipe_Comp = \uc644\uc804 \uc0ad\uc81c
 TABT_Mobile = \ubcc0\ud558\uae30 \uc26c\uc6b4
+
+MB_But_Block = \ube14\ub85d
+MB_But_Wipe_Cancel = \uc9c0\uc6b0\uae30 \ucde8\uc18c
+MB_Waiting = \uc7a5\uce58\ub97c \uae30\ub2e4\ub9ac\uace0
+BUSY_BLOCKING_SYNC_DEVICES = /ub3d9/uae30/ud654 /ub41c /uc7a5/uce58 /ucc28/ub2e8 /uc911 ...
+BUSY_CANCELLING_WIPE = /ucd08/uae30/ud654 /uc791/uc5c5 /ucde8/uc18c /uc911 ...
+MB_But_Disconnect = /ubd84/ub9ac
