--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = Digantung
 MB_Wipe_ACK = Lap belum selesai
 MB_Wipe_Comp = Lap selesai
 TABT_Mobile = Mudah alih
+
+MB_But_Block = Sekat
+MB_But_Wipe_Cancel = Batalkan Lap
+MB_Waiting = Menunggu peranti
+BUSY_BLOCKING_SYNC_DEVICES = Menyekat peranti yang disegerakkan ...
+BUSY_CANCELLING_WIPE = Membatalkan operasi penghapusan ...
+MB_But_Disconnect = Putuskan sambungan
