--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2701,3 +2701,10 @@ MB_Suspended = Geschorst
 MB_Wipe_ACK = Veeg in behandeling
 MB_Wipe_Comp = Wissen voltooid
 TABT_Mobile = Mobiel
+
+MB_But_Block = Blok
+MB_But_Wipe_Cancel = Annuleer Wipe
+MB_Waiting = Wachten op apparaat
+BUSY_BLOCKING_SYNC_DEVICES = Gesynchroniseerde apparaten blokkeren ...
+BUSY_CANCELLING_WIPE = Wissen annuleren ...
+MB_But_Disconnect = Loskoppelen
