--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2806,3 +2806,10 @@ MB_Suspended = Suspendert
 MB_Wipe_ACK = T\u00f8rk i p\u00e5vente
 MB_Wipe_Comp = T\u00f8rk ferdig
 TABT_Mobile = Mobil
+
+MB_But_Block = Blokkere
+MB_But_Wipe_Cancel = Avbryt T\u00f8rk
+MB_Waiting = Venter p\u00e5 enheten
+BUSY_BLOCKING_SYNC_DEVICES = Blokkerer synkroniserte enheter ...
+BUSY_CANCELLING_WIPE = Avbryter t/u00f8rking ...
+MB_But_Disconnect = Koble fra
