--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2790,3 +2790,10 @@ MB_Suspended = Zawieszony
 MB_Wipe_ACK = Wyczy\u015b\u0107 w toku
 MB_Wipe_Comp = Czyszczenie zako\u0144czone
 TABT_Mobile = mobilny
+
+MB_But_Block = Blok
+MB_But_Wipe_Cancel = Anuluj czyszczenie
+MB_Waiting = Oczekiwanie na urz\u0105dzenie
+BUSY_BLOCKING_SYNC_DEVICES = Blokowanie zsynchronizowanych urz/u0105dze/u0144 ...
+BUSY_CANCELLING_WIPE = Anulowanie operacji czyszczenia ...
+MB_But_Disconnect = Roz/u0142/u0105czy/u0107 si/u0119
