--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2700,3 +2700,10 @@ MB_Suspended = Suspenso
 MB_Wipe_ACK = Limpeza pendente
 MB_Wipe_Comp = Limpeza conclu\u00edda
 TABT_Mobile = M\u00f3vel
+
+MB_But_Block = Quadra
+MB_But_Wipe_Cancel = Cancelar limpeza
+MB_Waiting = Aguardando dispositivo
+BUSY_BLOCKING_SYNC_DEVICES = Bloqueando dispositivos sincronizados ...
+BUSY_CANCELLING_WIPE = Cancelando opera/u00e7/u00e3o de limpeza ...
+MB_But_Disconnect = Desconectar
