--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = Suspendat
 MB_Wipe_ACK = \u0218terge\u021bi \u00een a\u0219teptare
 MB_Wipe_Comp = \u0218tergere finalizat\u0103
 TABT_Mobile = Mobil
+
+MB_But_Block = bloc
+MB_But_Wipe_Cancel = Anula\u021bi \u0219tergerea
+MB_Waiting = A\u0219teptare pentru dispozitiv
+BUSY_BLOCKING_SYNC_DEVICES = Blocarea dispozitivelor sincronizate ...
+BUSY_CANCELLING_WIPE = Se anuleaz/u0103 opera/u021biunea de /u0219tergere ...
+MB_But_Disconnect = Deconecta
