--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = Suspended
 MB_Wipe_ACK = Obri\u0161ite v \u010dakanju
 MB_Wipe_Comp = Brisanje je kon\u010dano
 TABT_Mobile = Mobilni
+
+MB_But_Block = Blokiraj
+MB_But_Wipe_Cancel = Prekli\u010di brisanje
+MB_Waiting = \u010cakanje na napravo
+BUSY_BLOCKING_SYNC_DEVICES = Blokiranje sinhroniziranih naprav ...
+BUSY_CANCELLING_WIPE = Preklic brisanja ...
+MB_But_Disconnect = Prekini povezavo
