--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2701,3 +2701,10 @@ MB_Suspended = Upph\u00e4ngd
 MB_Wipe_ACK = Torka i v\u00e4ntan
 MB_Wipe_Comp = Torka klar
 TABT_Mobile = Mobil
+
+MB_But_Block = Blockera
+MB_But_Wipe_Cancel = Avbryt rensa
+MB_Waiting = V\u00e4ntar p\u00e5 enheten
+BUSY_BLOCKING_SYNC_DEVICES = Blockerar synkroniserade enheter ...
+BUSY_CANCELLING_WIPE = Avbryter torkning ...
+MB_But_Disconnect = Koppla fr/u00e5n
