--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -2806,3 +2806,10 @@ MB_Suspended = \u0b87\u0b9f\u0bc8\u0ba8\u0bc0\u0b95\u0bcd\u0b95\u0bae\u0bcd \u0b
 MB_Wipe_ACK = \u0ba8\u0bbf\u0bb2\u0bc1\u0bb5\u0bc8\u0baf\u0bbf\u0bb2\u0bcd \u0b89\u0bb3\u0bcd\u0bb3\u0ba4\u0bc1
 MB_Wipe_Comp = \u0ba4\u0bc1\u0b9f\u0bc8\u0baa\u0bcd\u0baa\u0bbe\u0ba9\u0bcd \u0bae\u0bc1\u0b9f\u0bbf\u0ba8\u0bcd\u0ba4\u0ba4\u0bc1
 TABT_Mobile = \u0b95\u0bc8\u0baa\u0bc7\u0b9a\u0bbf
+
+MB_But_Block = \u0ba4\u0b9f\u0bc1
+MB_But_Wipe_Cancel = \u0ba4\u0bc1\u0b9f\u0bc8\u0baa\u0bcd\u0baa\u0ba4\u0bc8 \u0bb0\u0ba4\u0bcd\u0ba4\u0bc1\u0b9a\u0bc6\u0baf\u0bcd
+MB_Waiting = \u0b9a\u0bbe\u0ba4\u0ba9\u0ba4\u0bcd\u0ba4\u0bbf\u0bb1\u0bcd\u0b95\u0bbe\u0b95 \u0b95\u0bbe\u0ba4\u0bcd\u0ba4\u0bbf\u0bb0\u0bc1\u0ba4\u0bcd\u0ba4\u0bb2\u0bcd
+BUSY_BLOCKING_SYNC_DEVICES = /u0b92/u0ba4/u0bcd/u0ba4/u0bbf/u0b9a/u0bc8/u0b95/u0bcd/u0b95/u0baa/u0bcd/u0baa/u0b9f/u0bcd/u0b9f /u0b9a/u0bbe/u0ba4/u0ba9/u0b99/u0bcd/u0b95/u0bb3/u0bc8/u0ba4/u0bcd /u0ba4/u0b9f/u0bc1/u0b95/u0bcd/u0b95/u0bc1/u0bae/u0bcd ...
+BUSY_CANCELLING_WIPE = /u0ba4/u0bc1/u0b9f/u0bc8/u0b95/u0bcd/u0b95/u0bc1/u0bae/u0bcd /u0b9a/u0bc6/u0baf/u0bb2/u0bcd/u0baa/u0bbe/u0b9f/u0bcd/u0b9f/u0bc8 /u0bb0/u0ba4/u0bcd/u0ba4/u0bc1/u0b9a/u0bc6/u0baf/u0bcd/u0b95/u0bbf/u0bb1/u0ba4/u0bc1 ...
+MB_But_Disconnect = /u0ba4/u0bc1/u0ba3/u0bcd/u0b9f/u0bbf/u0b95/u0bcd/u0b95/u0bb5/u0bc1/u0bae/u0bcd
