--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2795,3 +2795,10 @@ MB_Suspended = Ask\u0131ya al\u0131nd\u0131
 MB_Wipe_ACK = Beklemede silin
 MB_Wipe_Comp = Temizleme i\u015flemi tamamland\u0131
 TABT_Mobile = Cep Telefonu
+
+MB_But_Block = Blok
+MB_But_Wipe_Cancel = Silme \u0130\u015flemini \u0130ptal Et
+MB_Waiting = Cihaz i\u00e7in bekliyor
+BUSY_BLOCKING_SYNC_DEVICES = Senkronize edilmi/u015f cihazlar engelleniyor ...
+BUSY_CANCELLING_WIPE = Silme i/u015flemi iptal ediliyor ...
+MB_But_Disconnect = kesmek
