--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2786,3 +2786,10 @@ MB_Suspended = \u5df2\u6682\u505c
 MB_Wipe_ACK = \u64e6\u62ed\u4e2d
 MB_Wipe_Comp = \u64e6\u62ed\u5b8c\u6210
 TABT_Mobile = \u79fb\u52a8
+
+MB_But_Block = \u5757
+MB_But_Wipe_Cancel = \u53d6\u6d88\u64e6\u9664
+MB_Waiting = \u7b49\u5f85\u8bbe\u5907
+BUSY_BLOCKING_SYNC_DEVICES = /u963b/u6b62/u540c/u6b65/u7684/u8bbe/u5907...
+BUSY_CANCELLING_WIPE = /u53d6/u6d88/u64e6/u62ed/u64cd/u4f5c...
+MB_But_Disconnect = /u65ad/u5f00
