--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2813,3 +2813,10 @@ MB_Suspended = Suspendiran
 MB_Wipe_ACK = Obri\u0161ite na \u010dekanju
 MB_Wipe_Comp = Brisanje zavr\u0161eno
 TABT_Mobile = Mobilni
+
+MB_But_Block = Blok
+MB_But_Wipe_Cancel = Otka\u017ei brisanje
+MB_Waiting = \u010ceka se ure\u0111aj
+BUSY_BLOCKING_SYNC_DEVICES = Blokiranje sinkroniziranih ure/u0111aja ...
+BUSY_CANCELLING_WIPE = Otkazivanje postupka brisanja ...
+MB_But_Disconnect = isklju/u010diti
