--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -2801,3 +2801,10 @@ MB_Suspended = \u0ec2\u0e88\u0eb0\u0ec4\u0ea7\u0ec9
 MB_Wipe_ACK = \u0ec0\u0e8a\u0eb1\u0e94\u0e97\u0eb5\u0ec8\u0e8d\u0eb1\u0e87\u0e84\u0ec9\u0eb2\u0e87
 MB_Wipe_Comp = \u0ec0\u0e8a\u0eb1\u0e94\u0ec1\u0ea5\u0ec9\u0ea7
 TABT_Mobile = \u0ea1\u0eb7\u0e96\u0eb7
+
+MB_But_Block = \u0e95\u0eb1\u0e99
+MB_But_Wipe_Cancel = \u0e8d\u0ebb\u0e81\u0ec0\u0ea5\u0eb5\u0e81\u0e81\u0eb2\u0e99\u0ec0\u0e8a\u0eb1\u0e94
+MB_Waiting = \u0e81\u0eb3 \u0ea5\u0eb1\u0e87\u0ea5\u0ecd\u0e96\u0ec9\u0eb2\u0ead\u0eb8\u0e9b\u0eb0\u0e81\u0ead\u0e99
+BUSY_BLOCKING_SYNC_DEVICES = /u0e81/u0eb3 /u0ea5/u0eb1/u0e87/u0e82/u0eb1/u0e94/u0e82/u0ea7/u0eb2/u0e87/u0ead/u0eb8/u0e9b/u0eb0/u0e81/u0ead/u0e99/u0e97/u0eb5/u0ec8/u0e8a/u0eb4/u0ec9/u0e87/u0e82/u0ecd/u0ec9/u0ea1/u0eb9/u0e99 ...
+BUSY_CANCELLING_WIPE = /u0e81/u0eb3 /u0ea5/u0eb1/u0e87/u0e8d/u0ebb/u0e81/u0ec0/u0ea5/u0eb5/u0e81/u0e81/u0eb2/u0e99 /u0e94/u0eb3 /u0ec0/u0e99/u0eb5/u0e99/u0e81/u0eb2/u0e99/u0ec0/u0e8a/u0eb1/u0e94 ...
+MB_But_Disconnect = /u0e95/u0eb1/u0e94/u0e82/u0eb2/u0e94
