--- a/WebRoot/messages/ZaMsg_ru.properties
+++ b/WebRoot/messages/ZaMsg_ru.properties
@@ -2700,3 +2700,11 @@ MB_Suspended = \u041f\u0440\u0438\u043e\u0441\u0442\u0430\u043d\u043e\u0432\u043
 MB_Wipe_ACK = \u041e\u0436\u0438\u0434\u0430\u0435\u0442\u0441\u044f \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u0435
 MB_Wipe_Comp = \u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 TABT_Mobile = \u041c\u043e\u0431\u0438\u043b\u044c\u043d\u044b\u0439
+
+
+MB_But_Block = bloc
+MB_But_Wipe_Cancel = Anula\u021bi \u0219tergerea
+MB_Waiting = A\u0219teptare pentru dispozitiv
+BUSY_BLOCKING_SYNC_DEVICES = /u0411/u043b/u043e/u043a/u0438/u0440/u043e/u0432/u043a/u0430 /u0441/u0438/u043d/u0445/u0440/u043e/u043d/u0438/u0437/u0438/u0440/u0443/u0435/u043c/u044b/u0445 /u0443/u0441/u0442/u0440/u043e/u0439/u0441/u0442/u0432 ...
+BUSY_CANCELLING_WIPE = /u041e/u0442/u043c/u0435/u043d/u0430 /u043e/u043f/u0435/u0440/u0430/u0446/u0438/u0438 /u043e/u0447/u0438/u0441/u0442/u043a/u0438 ...
+MB_But_Disconnect = /u041e/u0442/u043a/u043b/u044e/u0447/u0438/u0442/u044c
