ZCS-10452:- Added support for accountOnlyRemoteWipe & cancelAccountOnlyRemoteWipe in the admin-console UI

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1969,8 +1969,8 @@ aliasTargetTypeDL = Llista de distribuci\u00f3
 aliasTargetTypeResource = Recurs
 
 STANDALONE = Aut\u00f2nom
-MASTER = Primària
-SLAVE = Secundària
+MASTER = Prim\u00e0ria
+SLAVE = Secund\u00e0ria
 Filter = Filtre
 SearchFilter_Aliases = \u00c0lies
 SearchFilter_Accounts = Comptes
@@ -2793,6 +2793,12 @@ TABT_Mobile = M\u00f2bil
 MB_But_Block = Bloc
 MB_But_Wipe_Cancel = Cancel\u00b7la Neteja
 MB_Waiting = Esperant per al dispositiu
-BUSY_BLOCKING_SYNC_DEVICES = S'estan bloquejant els dispositius sincronitzats ...
-BUSY_CANCELLING_WIPE = S'est/u00e0 cancel/u00b7lant l'operaci/u00f3 de neteja ...
+BUSY_BLOCKING_SYNC_DEVICES = S\u0027estan bloquejant els dispositius sincronitzats ...
+BUSY_CANCELLING_WIPE = S\u0027est\u00e0 cancel\u00b7lant l\u0027operaci\u00f3 de neteja ...
 MB_But_Disconnect = Desconnecta
+MB_Remove_Account_ACK = Elimina el compte pendent
+MB_Remove_Account_Comp = S\u0027ha eliminat el compte
+MB_But_Remove_Account = Elimina el compte
+MB_But_Remove_Account_Cancel = Cancel Remove Account
+BUSY_REMOVING_SYNC_ACCOUNT = S\u0027est\u00e0 eliminant el compte sincronitzat del dispositiu ...
+BUSY_CANCELLING_ACCOUNT_WIPE = S\u0027est\u00e0 cancel\u00b7lant l\u0027operació de neteja del compte ...
