--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2705,5 +2705,11 @@ MB_But_Block = Blok
 MB_But_Wipe_Cancel = Annuller sletning
 MB_Waiting = Venter p\u00e5 enhed
 BUSY_BLOCKING_SYNC_DEVICES = Blokerer synkroniserede enheder ...
-BUSY_CANCELLING_WIPE = Annullerer aft/u00f8rring ...
+BUSY_CANCELLING_WIPE = Annullerer aft\u00f8rring ...
 MB_But_Disconnect = Koble fra
+MB_Remove_Account_ACK = Fjern konto i afventning
+MB_Remove_Account_Comp = Konto fjernet
+MB_But_Remove_Account = Fjern konto
+MB_But_Remove_Account_Cancel = Annuller Fjern konto
+BUSY_REMOVING_SYNC_ACCOUNT = Fjerner synkroniseret konto fra enhed ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Annullerer sletning af konto ...
