--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2768,6 +2768,12 @@ TABT_Mobile = Handy, Mobiltelefon
 MB_But_Block = Block
 MB_But_Wipe_Cancel = L\u00f6schen abbrechen
 MB_Waiting = Warten auf Ger\u00e4t
-BUSY_BLOCKING_SYNC_DEVICES = Synchronisierte Ger/u00e4te blockieren ...
+BUSY_BLOCKING_SYNC_DEVICES = Synchronisierte Ger\u00e4te blockieren ...
 BUSY_CANCELLING_WIPE = Wischvorgang abbrechen ...
 MB_But_Disconnect = Trennen
+MB_Remove_Account_ACK = Konto ausstehend entfernen
+MB_Remove_Account_Comp = Konto entfernt
+MB_But_Remove_Account = Konto entfernen
+MB_But_Remove_Account_Cancel = Abbrechen Konto entfernen
+BUSY_REMOVING_SYNC_ACCOUNT = Gesynchroniseerd account van apparaat verwijderen ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Annuleren van het wissen van een account ...
