--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -2703,3 +2703,9 @@ MB_Waiting = Waiting for device
 BUSY_BLOCKING_SYNC_DEVICES = Blocking synced devices ...
 BUSY_CANCELLING_WIPE = Canceling wipe operation ...
 MB_But_Disconnect = Disconnect
+MB_Remove_Account_ACK = Remove account pending
+MB_Remove_Account_Comp = Account removed
+MB_But_Remove_Account = Remove Account
+MB_But_Remove_Account_Cancel = Cancel Remove Account
+BUSY_REMOVING_SYNC_ACCOUNT = Removing synced account from device ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Canceling Account wipe operation ...
