--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2779,5 +2779,11 @@ MB_But_Block = Bloquear
 MB_But_Wipe_Cancel = Cancelar limpieza
 MB_Waiting = Esperando por el dispositivo
 BUSY_BLOCKING_SYNC_DEVICES = Bloqueando dispositivos sincronizados ...
-BUSY_CANCELLING_WIPE = Cancelando la operaci/u00f3n de limpieza ...
+BUSY_CANCELLING_WIPE = Cancelando la operaci\u00f3n de limpieza ...
 MB_But_Disconnect = desconectar
+MB_Remove_Account_ACK = Eliminar cuenta pendiente
+MB_Remove_Account_Comp = Cuenta eliminada
+MB_But_Remove_Account = Eliminar cuenta
+MB_But_Remove_Account_Cancel = Cancelar Quitar cuenta
+BUSY_REMOVING_SYNC_ACCOUNT = S\u00fcnkroonitud konto eemaldamine seadmest ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Konto kustutamise toimingu t\u00fchistamine ...
