--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2798,3 +2798,9 @@ MB_Waiting = Gailuaren zain
 BUSY_BLOCKING_SYNC_DEVICES = Sinkronizatutako gailuak blokeatzen ...
 BUSY_CANCELLING_WIPE = Garbiketa eragiketa bertan behera uzten ...
 MB_But_Disconnect = deskonektatu
+MB_Remove_Account_ACK = Kendu zain dagoen kontua
+MB_Remove_Account_Comp = Kendu da kontua
+MB_But_Remove_Account = Kendu kontua
+MB_But_Remove_Account_Cancel = Utzi Kendu kontua
+BUSY_REMOVING_SYNC_ACCOUNT = Sinkronizatutako kontua gailutik kentzen ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Kontua garbitzeko eragiketa bertan behera uzten ...
