--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -2802,8 +2802,15 @@ MB_Wipe_Comp = Essuyage termin\u00e9
 TABT_Mobile = Mobile
 
 MB_But_Block = Bloc
-MB_But_Wipe_Cancel = Annuler l'effacement
-MB_Waiting = En attente de l'appareil
-BUSY_BLOCKING_SYNC_DEVICES = Blocage des appareils synchronis/u00e9s ...
-BUSY_CANCELLING_WIPE = Annulation de l'op/u00e9ration d'effacement ...
-MB_But_Disconnect = d/u00e9connecter
+MB_But_Wipe_Cancel = Annuler l\u0027effacement
+MB_Waiting = En attente de l\u0027appareil
+BUSY_BLOCKING_SYNC_DEVICES = Blocage des appareils synchronis\u00e9s ...
+BUSY_CANCELLING_WIPE = Annulation de l\u0027op\u00e9ration d\u0027effacement ...
+MB_But_Disconnect = d\u00e9connecter
+MB_Remove_Account_ACK = Supprimer le compte en attente
+MB_Remove_Account_Comp = Compte supprim\u00e9
+MB_But_Remove_Account = Supprimer le compte
+MB_But_Remove_Account_Cancel = Annuler Supprimer le compte
+BUSY_REMOVING_SYNC_ACCOUNT = Suppression du compte synchronisé de l\u0027appareil ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Annulation de l\u0027opération d\u0027effacement du compte ...
+
