--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2812,3 +2812,9 @@ MB_Waiting = Menunggu perangkat
 BUSY_BLOCKING_SYNC_DEVICES = Memblokir perangkat yang disinkronkan ...
 BUSY_CANCELLING_WIPE = Membatalkan operasi penghapusan ...
 MB_But_Disconnect = Memutuskan
+MB_Remove_Account_ACK = Hapus akun yang menunggu keputusan
+MB_Remove_Account_Comp = Akun dihapus
+MB_But_Remove_Account = Menghapus akun
+MB_But_Remove_Account_Cancel = Batalkan Hapus Akun
+BUSY_REMOVING_SYNC_ACCOUNT = Menghapus akun yang disinkronkan dari perangkat ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Membatalkan operasi Penghapusan akun ...
