--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2705,5 +2705,11 @@ MB_But_Block = Bloccare
 MB_But_Wipe_Cancel = Annulla cancellazione
 MB_Waiting = In attesa del dispositivo
 BUSY_BLOCKING_SYNC_DEVICES = Blocco dei dispositivi sincronizzati ...
-BUSY_CANCELLING_WIPE = Annullamento dell'operazione di cancellazione ...
+BUSY_CANCELLING_WIPE = Annullamento dell\u0027operazione di cancellazione ...
 MB_But_Disconnect = Disconnect
+MB_Remove_Account_ACK = Rimuovi account in sospeso
+MB_Remove_Account_Comp = Account rimosso
+MB_But_Remove_Account = Rimuovi l\u0027account
+MB_But_Remove_Account_Cancel = Annulla Rimuovi account
+BUSY_REMOVING_SYNC_ACCOUNT = Rimozione dell\u0027account sincronizzato dal dispositivo ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Annullamento dell\u0027operazione di cancellazione dei dati dell\u0027account ...
