--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -2754,9 +2754,15 @@ MB_Wipe_ACK = \u30ef\u30a4\u30d7\u4fdd\u7559\u4e2d
 MB_Wipe_Comp = \u30ef\u30a4\u30d7\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f
 TABT_Mobile = \u30e2\u30d0\u30a4\u30eb
 
-MB_But_Block = aaaaaaaaaaaa\u30d6\u30ed\u30c3\u30af
-MB_But_Wipe_Cancel = aaaaaaaaaaaa\u30ef\u30a4\u30d7\u3092\u30ad\u30e3\u30f3\u30bb\u30eb
-MB_Waiting = aaaaaaaaaaaa\u30c7\u30d0\u30a4\u30b9\u3092\u5f85\u3063\u3066\u3044\u308b
-BUSY_BLOCKING_SYNC_DEVICES = /u540c/u671f/u3055/u308c/u305f/u30c7/u30d0/u30a4/u30b9/u306e/u30d6/u30ed/u30c3/u30af../u3002
-BUSY_CANCELLING_WIPE = /u30ef/u30a4/u30d7/u64cd/u4f5c/u306e/u30ad/u30e3/u30f3/u30bb/u30eb../u3002
-MB_But_Disconnect = /u5207/u65ad/u3059/u308b
+MB_But_Block = \u30d6\u30ed\u30c3\u30af
+MB_But_Wipe_Cancel = \u30ef\u30a4\u30d7\u3092\u30ad\u30e3\u30f3\u30bb\u30eb
+MB_Waiting = \u30c7\u30d0\u30a4\u30b9\u3092\u5f85\u3063\u3066\u3044\u308b
+BUSY_BLOCKING_SYNC_DEVICES = \u540c\u671f\u3055\u308c\u305f\u30c7\u30d0\u30a4\u30b9\u306e\u30d6\u30ed\u30c3\u30af..\u3002
+BUSY_CANCELLING_WIPE = \u30ef\u30a4\u30d7\u64cd\u4f5c\u306e\u30ad\u30e3\u30f3\u30bb\u30eb..\u3002
+MB_But_Disconnect = \u5207\u65ad\u3059\u308b
+MB_Remove_Account_ACK = \u4fdd\u7559\u4e2d\u306e\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u524a\u9664\u3059\u308b
+MB_Remove_Account_Comp = \u30a2\u30ab\u30a6\u30f3\u30c8\u304c\u524a\u9664\u3055\u308c\u307e\u3057\u305f
+MB_But_Remove_Account = \u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u524a\u9664
+MB_But_Remove_Account_Cancel = \u30ad\u30e3\u30f3\u30bb\u30eb\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u524a\u9664
+BUSY_REMOVING_SYNC_ACCOUNT = \u540c\u671f\u3055\u308c\u305f\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u30c7\u30d0\u30a4\u30b9\u304b\u3089\u524a\u9664\u3057\u3066\u3044\u307e\u3059\u002e\u002e\u002e
+BUSY_CANCELLING_ACCOUNT_WIPE = \u30a2\u30ab\u30a6\u30f3\u30c8\u30ef\u30a4\u30d7\u64cd\u4f5c\u306e\u30ad\u30e3\u30f3\u30bb\u30eb\u002e\u002e\u3002
