--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2747,6 +2747,12 @@ TABT_Mobile = \ubcc0\ud558\uae30 \uc26c\uc6b4
 MB_But_Block = \ube14\ub85d
 MB_But_Wipe_Cancel = \uc9c0\uc6b0\uae30 \ucde8\uc18c
 MB_Waiting = \uc7a5\uce58\ub97c \uae30\ub2e4\ub9ac\uace0
-BUSY_BLOCKING_SYNC_DEVICES = /ub3d9/uae30/ud654 /ub41c /uc7a5/uce58 /ucc28/ub2e8 /uc911 ...
-BUSY_CANCELLING_WIPE = /ucd08/uae30/ud654 /uc791/uc5c5 /ucde8/uc18c /uc911 ...
-MB_But_Disconnect = /ubd84/ub9ac
+BUSY_BLOCKING_SYNC_DEVICES = \ub3d9\uae30\ud654 \ub41c \uc7a5\uce58 \ucc28\ub2e8 \uc911 ...
+BUSY_CANCELLING_WIPE = \ucd08\uae30\ud654 \uc791\uc5c5 \ucde8\uc18c \uc911 ...
+MB_But_Disconnect = \ubd84\ub9ac
+MB_Remove_Account_ACK = \ubcf4\ub958\uc911\uc778 \uacc4\uc815 \uc81c\uac70
+MB_Remove_Account_Comp = \uacc4\uc815\uc774 \uc81c\uac70\ub418\uc5c8\uc2b5\ub2c8\ub2e4\u002e
+MB_But_Remove_Account = \uacc4\uc815 \uc0ad\uc81c
+MB_But_Remove_Account_Cancel = \ucde8\uc18c \uacc4\uc815 \uc81c\uac70
+BUSY_REMOVING_SYNC_ACCOUNT = \uae30\uae30\uc5d0\uc11c \ub3d9\uae30\ud654 \ub41c \uacc4\uc815 \uc81c\uac70 \uc911 \u002e\u002e\u002e
+BUSY_CANCELLING_ACCOUNT_WIPE = \uacc4\uc815 \ucd08\uae30\ud654 \uc791\uc5c5 \ucde8\uc18c \uc911 \u002e\u002e\u002e
