--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2807,3 +2807,9 @@ MB_Waiting = Menunggu peranti
 BUSY_BLOCKING_SYNC_DEVICES = Menyekat peranti yang disegerakkan ...
 BUSY_CANCELLING_WIPE = Membatalkan operasi penghapusan ...
 MB_But_Disconnect = Putuskan sambungan
+MB_Remove_Account_ACK = Buang akaun belum selesai
+MB_Remove_Account_Comp = Akaun dikeluarkan
+MB_But_Remove_Account = Alih keluar Akaun
+MB_But_Remove_Account_Cancel = Batal Buang Akaun
+BUSY_REMOVING_SYNC_ACCOUNT = Mengalih keluar akaun yang disegerakkan dari peranti ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Membatalkan operasi penghapusan Akaun ...
