--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2810,5 +2810,11 @@ MB_But_Block = Blokkere
 MB_But_Wipe_Cancel = Avbryt T\u00f8rk
 MB_Waiting = Venter p\u00e5 enheten
 BUSY_BLOCKING_SYNC_DEVICES = Blokkerer synkroniserte enheter ...
-BUSY_CANCELLING_WIPE = Avbryter t/u00f8rking ...
+BUSY_CANCELLING_WIPE = Avbryter t\u00f8rking ...
 MB_But_Disconnect = Koble fra
+MB_Remove_Account_ACK = Fjern kontoen som venter
+MB_Remove_Account_Comp = Kontoen er fjernet
+MB_But_Remove_Account = Fjern konto
+MB_But_Remove_Account_Cancel = Avbryt Fjern konto
+BUSY_REMOVING_SYNC_ACCOUNT = Fjerner synkronisert konto fra enheten ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Avbryter sletting av konto ...
