--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2793,6 +2793,13 @@ TABT_Mobile = mobilny
 MB_But_Block = Blok
 MB_But_Wipe_Cancel = Anuluj czyszczenie
 MB_Waiting = Oczekiwanie na urz\u0105dzenie
-BUSY_BLOCKING_SYNC_DEVICES = Blokowanie zsynchronizowanych urz/u0105dze/u0144 ...
+BUSY_BLOCKING_SYNC_DEVICES = Blokowanie zsynchronizowanych urz\u0105dze\u0144 ...
 BUSY_CANCELLING_WIPE = Anulowanie operacji czyszczenia ...
-MB_But_Disconnect = Roz/u0142/u0105czy/u0107 si/u0119
+MB_But_Disconnect = Roz\u0142\u0105czy\u0107 si\u0119
+MB_Remove_Account_ACK = Usu\u0144 oczekuj\u0105ce konto
+MB_Remove_Account_Comp = Konto zosta\u0142o usuni\u0119te
+MB_But_Remove_Account = Usu\u0144 konto
+MB_But_Remove_Account_Cancel = Anuluj Usu\u0144 konto
+BUSY_REMOVING_SYNC_ACCOUNT = Usuwam zsynchronizowane konto z urz\u0105dzenia ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Anulowanie operacji czyszczenia konta ...
+
