--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2704,5 +2704,11 @@ MB_But_Block = Quadra
 MB_But_Wipe_Cancel = Cancelar limpeza
 MB_Waiting = Aguardando dispositivo
 BUSY_BLOCKING_SYNC_DEVICES = Bloqueando dispositivos sincronizados ...
-BUSY_CANCELLING_WIPE = Cancelando opera/u00e7/u00e3o de limpeza ...
+BUSY_CANCELLING_WIPE = Cancelando opera\u00e7\u00e3o de limpeza ...
 MB_But_Disconnect = Desconectar
+MB_Remove_Account_ACK = Remover conta pendente
+MB_Remove_Account_Comp = Conta removida
+MB_But_Remove_Account = Remover conta
+MB_But_Remove_Account_Cancel = Cancelar Remover Conta
+BUSY_REMOVING_SYNC_ACCOUNT = Removendo conta sincronizada do dispositivo ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Cancelando opera\u00e7\u00e3o de limpeza de conta ...
