--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2805,5 +2805,11 @@ MB_But_Block = bloc
 MB_But_Wipe_Cancel = Anula\u021bi \u0219tergerea
 MB_Waiting = A\u0219teptare pentru dispozitiv
 BUSY_BLOCKING_SYNC_DEVICES = Blocarea dispozitivelor sincronizate ...
-BUSY_CANCELLING_WIPE = Se anuleaz/u0103 opera/u021biunea de /u0219tergere ...
+BUSY_CANCELLING_WIPE = Se anuleaz\u0103 opera\u021biunea de \u0219tergere ...
 MB_But_Disconnect = Deconecta
+MB_Remove_Account_ACK = Elimina\u021bi contul \u00een a\u0219teptare
+MB_Remove_Account_Comp = Cont eliminat
+MB_But_Remove_Account = Sterge contul
+MB_But_Remove_Account_Cancel = Anula\u021bi Eliminarea contului
+BUSY_REMOVING_SYNC_ACCOUNT = Se elimin\u0103 contul sincronizat de pe dispozitiv ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Se anuleaz\u0103 opera\u021biunea de \u0219tergere a contului ...
