--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2807,3 +2807,9 @@ MB_Waiting = \u010cakanje na napravo
 BUSY_BLOCKING_SYNC_DEVICES = Blokiranje sinhroniziranih naprav ...
 BUSY_CANCELLING_WIPE = Preklic brisanja ...
 MB_But_Disconnect = Prekini povezavo
+MB_Remove_Account_ACK = Odstrani ra\u010dun v teku
+MB_Remove_Account_Comp = Ra\u010dun odstranjen
+MB_But_Remove_Account = Odstrani ra\u010dun
+MB_But_Remove_Account_Cancel = Prekli\u010di Odstrani ra\u010dun
+BUSY_REMOVING_SYNC_ACCOUNT = Odstranjevanje sinhroniziranega ra\u010duna iz naprave ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Preklic brisanja ra\u010duna ...
