--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2706,4 +2706,10 @@ MB_But_Wipe_Cancel = Avbryt rensa
 MB_Waiting = V\u00e4ntar p\u00e5 enheten
 BUSY_BLOCKING_SYNC_DEVICES = Blockerar synkroniserade enheter ...
 BUSY_CANCELLING_WIPE = Avbryter torkning ...
-MB_But_Disconnect = Koppla fr/u00e5n
+MB_But_Disconnect = Koppla fr\u00e5n
+MB_Remove_Account_ACK = Ta bort v\u00e4ntande konto
+MB_Remove_Account_Comp = Kontot har tagits bort
+MB_But_Remove_Account = Ta bort konto
+MB_But_Remove_Account_Cancel = Avbryt Ta bort konto
+BUSY_REMOVING_SYNC_ACCOUNT = Tar bort det synkroniserade kontot från enheten ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Avbryter rensning av konto ...
