--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2798,6 +2798,12 @@ TABT_Mobile = Cep Telefonu
 MB_But_Block = Blok
 MB_But_Wipe_Cancel = Silme \u0130\u015flemini \u0130ptal Et
 MB_Waiting = Cihaz i\u00e7in bekliyor
-BUSY_BLOCKING_SYNC_DEVICES = Senkronize edilmi/u015f cihazlar engelleniyor ...
-BUSY_CANCELLING_WIPE = Silme i/u015flemi iptal ediliyor ...
+BUSY_BLOCKING_SYNC_DEVICES = Senkronize edilmi\u015f cihazlar engelleniyor ...
+BUSY_CANCELLING_WIPE = Silme i\u015flemi iptal ediliyor ...
 MB_But_Disconnect = kesmek
+MB_Remove_Account_ACK = Bekleyen hesabı kaldır
+MB_Remove_Account_Comp = Hesap kaldırıldı
+MB_But_Remove_Account = Hesabı kaldır
+MB_But_Remove_Account_Cancel = Hesabı Kaldırmayı \u0130ptal Et
+BUSY_REMOVING_SYNC_ACCOUNT = Senkronize edilmi\u015f hesap cihazdan kaldırılıyor ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Hesap silme i\u015flemi iptal ediliyor ...
