--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2789,6 +2789,12 @@ TABT_Mobile = \u79fb\u52a8
 MB_But_Block = \u5757
 MB_But_Wipe_Cancel = \u53d6\u6d88\u64e6\u9664
 MB_Waiting = \u7b49\u5f85\u8bbe\u5907
-BUSY_BLOCKING_SYNC_DEVICES = /u963b/u6b62/u540c/u6b65/u7684/u8bbe/u5907...
-BUSY_CANCELLING_WIPE = /u53d6/u6d88/u64e6/u62ed/u64cd/u4f5c...
-MB_But_Disconnect = /u65ad/u5f00
+BUSY_BLOCKING_SYNC_DEVICES = \u963b\u6b62\u540c\u6b65\u7684\u8bbe\u5907...
+BUSY_CANCELLING_WIPE = \u53d6\u6d88\u64e6\u62ed\u64cd\u4f5c...
+MB_But_Disconnect = \u65ad\u5f00
+MB_Remove_Account_ACK = \u5220\u9664\u5f85\u5904\u7406\u7684\u5e10\u6237
+MB_Remove_Account_Comp = \u5e10\u6237\u5df2\u5220\u9664
+MB_But_Remove_Account = \u5220\u9664\u5e10\u6237
+MB_But_Remove_Account_Cancel = \u53d6\u6d88\u5220\u9664\u5e10\u6237
+BUSY_REMOVING_SYNC_ACCOUNT = Removing synced account from device ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Canceling Account wipe operation ...
