--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2816,6 +2816,12 @@ TABT_Mobile = Mobilni
 MB_But_Block = Blok
 MB_But_Wipe_Cancel = Otka\u017ei brisanje
 MB_Waiting = \u010ceka se ure\u0111aj
-BUSY_BLOCKING_SYNC_DEVICES = Blokiranje sinkroniziranih ure/u0111aja ...
+BUSY_BLOCKING_SYNC_DEVICES = Blokiranje sinkroniziranih ure\u0111aja ...
 BUSY_CANCELLING_WIPE = Otkazivanje postupka brisanja ...
-MB_But_Disconnect = isklju/u010diti
+MB_But_Disconnect = isklju\u010diti
+MB_Remove_Account_ACK = Uklonite ra\u010dun na \u010dekanju
+MB_Remove_Account_Comp = Ra\u010dun uklonjen
+MB_But_Remove_Account = Uklonite ra\u010dun
+MB_But_Remove_Account_Cancel = Otka\u017ei Ukloni ra\u010dun
+BUSY_REMOVING_SYNC_ACCOUNT = Uklanjanje sinkroniziranog ra\u010duna s ure\u0111aja ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Otkazivanje postupka brisanja ra\u010duna ...
