--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2804,6 +2804,12 @@ TABT_Mobile = Mobil
 MB_But_Block = Blokk
 MB_But_Wipe_Cancel = T\u00f6r\u00f6lje a T\u00f6rl\u00e9s lehet\u0151s\u00e9get
 MB_Waiting = V\u00e1rakoz\u00e1s az eszk\u00f6zre
-BUSY_BLOCKING_SYNC_DEVICES = Szinkroniz/u00e1lt eszk/u00f6z/u00f6k blokkol/u00e1sa ...
-BUSY_CANCELLING_WIPE = T/u00f6rl/u00e9si m/u0171velet t/u00f6rl/u00e9se ...
-MB_But_Disconnect = sz/u00e9tkapcsol
+BUSY_BLOCKING_SYNC_DEVICES = Szinkroniz\u00e1lt eszk\u00f6z\u00f6k blokkol\u00e1sa ...
+BUSY_CANCELLING_WIPE = T\u00f6rl\u00e9si m\u0171velet t\u00f6rl\u00e9se ...
+MB_But_Disconnect = sz\u00e9tkapcsol
+MB_Remove_Account_ACK = F\u00fcgg\u0151ben l\u00e9v\u0151 fi\u00f3k elt\u00e1vol\u00edt\u00e1sa
+MB_Remove_Account_Comp = Fi\u00f3k elt\u00e1vol\u00edtva
+MB_But_Remove_Account = Fi\u00f3k t\u00f6rl\u00e9se
+MB_But_Remove_Account_Cancel = M\u00e9gse Fi\u00f3k elt\u00e1vol\u00edt\u00e1sa
+BUSY_REMOVING_SYNC_ACCOUNT = \u0053\u007a\u0069\u006e\u006b\u0072\u006f\u006e\u0069\u007a\u00e1\u006c\u0074 \u0066\u0069\u00f3\u006b \u0065\u006c\u0074\u00e1\u0076\u006f\u006c\u00ed\u0074\u00e1\u0073\u0061 \u0061\u007a \u0065\u0073\u007a\u006b\u00f6\u007a\u0072\u0151\u006c ...
+BUSY_CANCELLING_ACCOUNT_WIPE = \u0041 \u0066\u0069\u00f3\u006b \u0074\u00f6\u0072\u006c\u00e9\u0073\u0065 \u006d\u0171\u0076\u0065\u006c\u0065\u0074 \u0074\u00f6\u0072\u006c\u00e9\u0073\u0065 ...
