--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2804,6 +2804,12 @@ TABT_Mobile = \u5e0\u5d9\u5d9\u5d3
 MB_But_Block = \u05d7\u05e1\u05d5\u05dd
 MB_But_Wipe_Cancel = \u05d1\u05d8\u05dc \u05de\u05d7\u05d9\u05e7\u05d4
 MB_Waiting = \u05de\u05d7\u05db\u05d4 \u05dc\u05de\u05db\u05e9\u05d9\u05e8
-BUSY_BLOCKING_SYNC_DEVICES = /u05d7/u05d5/u05e1/u05dd /u05de/u05db/u05e9/u05d9/u05e8/u05d9/u05dd /u05de/u05e1/u05d5/u05e0/u05db/u05e8/u05e0/u05d9/u05dd ...
-BUSY_CANCELLING_WIPE = /u05de/u05d1/u05d8/u05dc /u05e4/u05e2/u05d5/u05dc/u05ea /u05e0/u05d9/u05d2/u05d5/u05d1 ...
-MB_But_Disconnect = /u05dc/u05e0/u05ea/u05e7
+BUSY_BLOCKING_SYNC_DEVICES = \u05d7\u05d5\u05e1\u05dd \u05de\u05db\u05e9\u05d9\u05e8\u05d9\u05dd \u05de\u05e1\u05d5\u05e0\u05db\u05e8\u05e0\u05d9\u05dd ...
+BUSY_CANCELLING_WIPE = \u05de\u05d1\u05d8\u05dc \u05e4\u05e2\u05d5\u05dc\u05ea \u05e0\u05d9\u05d2\u05d5\u05d1 ...
+MB_But_Disconnect = \u05dc\u05e0\u05ea\u05e7
+MB_Remove_Account_ACK = \u05d4\u05e1\u05e8 \u05d7\u05e9\u05d1\u05d5\u05df \u05d1\u05d4\u05de\u05ea\u05e0\u05d4
+MB_Remove_Account_Comp = \u05d4\u05d7\u05e9\u05d1\u05d5\u05df \u05d4\u05d5\u05e1\u05e8
+MB_But_Remove_Account = \u05d4\u05e1\u05e8 \u05d7\u05e9\u05d1\u05d5\u05df
+MB_But_Remove_Account_Cancel = \u05d1\u05d8\u05dc \u05d4\u05e1\u05e8 \u05d7\u05e9\u05d1\u05d5\u05df
+BUSY_REMOVING_SYNC_ACCOUNT = \u05de\u05e1\u05d9\u05e8 \u05d7\u05e9\u05d1\u05d5\u05df \u05de\u05e1\u05d5\u05e0\u05db\u05e8\u05df \u05de\u05d4\u05de\u05db\u05e9\u05d9\u05e8 \u002e\u002e\u002e
+BUSY_CANCELLING_ACCOUNT_WIPE = \u05de\u05d1\u05d8\u05dc \u05e4\u05e2\u05d5\u05dc\u05ea \u05de\u05d7\u05d9\u05e7\u05ea \u05d7\u05e9\u05d1\u05d5\u05df \u002e\u002e\u002e
