--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2707,3 +2707,9 @@ MB_Waiting = Wachten op apparaat
 BUSY_BLOCKING_SYNC_DEVICES = Gesynchroniseerde apparaten blokkeren ...
 BUSY_CANCELLING_WIPE = Wissen annuleren ...
 MB_But_Disconnect = Loskoppelen
+MB_Remove_Account_ACK = Account in behandeling verwijderen
+MB_Remove_Account_Comp = Account verwijderd
+MB_But_Remove_Account = Verwijder account
+MB_But_Remove_Account_Cancel = Annuleer Account verwijderen
+BUSY_REMOVING_SYNC_ACCOUNT = Removing synced account from device ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Canceling Account wipe operation ...
