--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -2802,6 +2802,12 @@ TABT_Mobile = \u0e21\u0e37\u0e2d\u0e16\u0e37\u0e2d
 MB_But_Block = \u0e1a\u0e25\u0e47\u0e2d\u0e01
 MB_But_Wipe_Cancel = \u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e01\u0e32\u0e23\u0e25\u0e49\u0e32\u0e07\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25
 MB_Waiting = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e23\u0e2d\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c
-BUSY_BLOCKING_SYNC_DEVICES = /u0e01/u0e33/u0e25/u0e31/u0e07/u0e1a/u0e25/u0e47/u0e2d/u0e01/u0e2d/u0e38/u0e1b/u0e01/u0e23/u0e13/u0e4c/u0e17/u0e35/u0e48/u0e0b/u0e34/u0e07/u0e04/u0e4c ...
-BUSY_CANCELLING_WIPE = /u0e01/u0e33/u0e25/u0e31/u0e07/u0e22/u0e01/u0e40/u0e25/u0e34/u0e01/u0e01/u0e32/u0e23/u0e25/u0e49/u0e32/u0e07/u0e02/u0e49/u0e2d/u0e21/u0e39/u0e25 ...
-MB_But_Disconnect = /u0e1b/u0e25/u0e14
+BUSY_BLOCKING_SYNC_DEVICES = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e1a\u0e25\u0e47\u0e2d\u0e01\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c ...
+BUSY_CANCELLING_WIPE = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e01\u0e32\u0e23\u0e25\u0e49\u0e32\u0e07\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25 ...
+MB_But_Disconnect = \u0e1b\u0e25\u0e14
+MB_Remove_Account_ACK = \u0e25\u0e1a\u0e1a\u0e31\u0e0d\u0e0a\u0e35\u0e17\u0e35\u0e48\u0e23\u0e2d\u0e14\u0e33\u0e40\u0e19\u0e34\u0e19\u0e01\u0e32\u0e23
+MB_Remove_Account_Comp = \u0e25\u0e1a\u0e1a\u0e31\u0e0d\u0e0a\u0e35\u0e41\u0e25\u0e49\u0e27
+MB_But_Remove_Account = \u0e1b\u0e34\u0e14\u0e1a\u0e31\u0e0d\u0e0a\u0e35
+MB_But_Remove_Account_Cancel = \u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e25\u0e1a\u0e1a\u0e31\u0e0d\u0e0a\u0e35
+BUSY_REMOVING_SYNC_ACCOUNT = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e25\u0e1a\u0e1a\u0e31\u0e0d\u0e0a\u0e35\u0e17\u0e35\u0e48\u0e0b\u0e34\u0e07\u0e04\u0e4c\u0e2d\u0e2d\u0e01\u0e08\u0e32\u0e01\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c \u002e\u002e\u002e
+BUSY_CANCELLING_ACCOUNT_WIPE = \u0e01\u0e33\u0e25\u0e31\u0e07\u0e22\u0e01\u0e40\u0e25\u0e34\u0e01\u0e01\u0e32\u0e23\u0e14\u0e33\u0e40\u0e19\u0e34\u0e19\u0e01\u0e32\u0e23\u0e25\u0e49\u0e32\u0e07\u0e1a\u0e31\u0e0d\u0e0a\u0e35 \u002e\u002e\u002e
