--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2809,6 +2809,12 @@ TABT_Mobile = Di \u0111\u1ed9ng
 MB_But_Block = Kh\u1ed1i
 MB_But_Wipe_Cancel = H\u1ee7y x\u00f3a
 MB_Waiting = \u0110ang \u0111\u1ee3i thi\u1ebft b\u1ecb
-BUSY_BLOCKING_SYNC_DEVICES = Ch/u1eb7n c/u00e1c thi/u1ebft b/u1ecb /u0111/u00e3 /u0111/u1ed3ng b/u1ed9 h/u00f3a ...
-BUSY_CANCELLING_WIPE = /u0110ang h/u1ee7y thao t/u00e1c x/u00f3a ...
-MB_But_Disconnect = Ng/u1eaft k/u1ebft n/u1ed1i
+BUSY_BLOCKING_SYNC_DEVICES = Ch\u1eb7n c\u00e1c thi\u1ebft b\u1ecb \u0111\u00e3 \u0111\u1ed3ng b\u1ed9 h\u00f3a ...
+BUSY_CANCELLING_WIPE = \u0110ang h\u1ee7y thao t\u00e1c x\u00f3a ...
+MB_But_Disconnect = Ng\u1eaft k\u1ebft n\u1ed1i
+MB_Remove_Account_ACK = X\u00f3a t\u00e0i kho\u1ea3n \u0111ang ch\u1edd x\u1eed l\u00fd
+MB_Remove_Account_Comp = T\u00e0i kho\u1ea3n \u0111\u00e3 b\u1ecb x\u00f3a
+MB_But_Remove_Account = Xo\u00e1 t\u00e0i kho\u1ea3n
+MB_But_Remove_Account_Cancel = H\u1ee7y b\u1ecf X\u00f3a t\u00e0i kho\u1ea3n
+BUSY_REMOVING_SYNC_ACCOUNT = \u0110ang x\u00f3a t\u00e0i kho\u1ea3n \u0110\u00e3 \u0110\u1ed3ng b\u1ed9 h\u00f3a kh\u1ecfi thi\u1ebft b\u1ecb ...
+BUSY_CANCELLING_ACCOUNT_WIPE = \u0110ang h\u1ee7y thao t\u00e1c x\u00f3a t\u00e0i kho\u1ea3n ...
