--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -2719,6 +2719,12 @@ TABT_Mobile = \u79fb\u52a8
 MB_But_Block = \u584a
 MB_But_Wipe_Cancel = \u53d6\u6d88\u64e6\u9664
 MB_Waiting = \u7b49\u5f85\u8a2d\u5099
-BUSY_BLOCKING_SYNC_DEVICES = /u963b/u6b62/u540c/u6b65/u7684/u8a2d/u5099...
-BUSY_CANCELLING_WIPE = /u53d6/u6d88/u64e6/u62ed/u64cd/u4f5c...
-MB_But_Disconnect = /u65b7/u958b
+BUSY_BLOCKING_SYNC_DEVICES = \u963b\u6b62\u540c\u6b65\u7684\u8a2d\u5099...
+BUSY_CANCELLING_WIPE = \u53d6\u6d88\u64e6\u62ed\u64cd\u4f5c...
+MB_But_Disconnect = \u65b7\u958b
+MB_Remove_Account_ACK = \u5220\u9664\u5f85\u5904\u7406\u7684\u5e10\u6237
+MB_Remove_Account_Comp = \u5e10\u6237\u5df2\u5220\u9664
+MB_But_Remove_Account = \u5220\u9664\u5e10\u6237
+MB_But_Remove_Account_Cancel = \u53d6\u6d88\u5220\u9664\u5e10\u6237
+BUSY_REMOVING_SYNC_ACCOUNT = \u4ece\u8bbe\u5907\u4e2d\u5220\u9664\u5df2\u540c\u6b65\u7684\u5e10\u6237\u002e\u002e\u002e
+BUSY_CANCELLING_ACCOUNT_WIPE = \u53d6\u6d88\u5e10\u6237\u64e6\u9664\u64cd\u4f5c\u002e\u002e\u002e
